Prevent index table images from squishing

--- a/app/assets/stylesheets/active_tweaker/_bootstrap_overrides.css.sass
+++ b/app/assets/stylesheets/active_tweaker/_bootstrap_overrides.css.sass
@@ -34,3 +34,8 @@ body.admin_namespace, #active_admin_content
 
   ul.wysihtml5-toolbar li
     clear: none
+
+  table.index_table
+    td
+      img
+        max-width: none
